Compile as C.  (But need to link as C++.)

--- a/example/Makefile
+++ b/example/Makefile
@@ -4,5 +4,10 @@ MESYTECPATH=../../mesytec-mvlc/
 
 .PHONY: all
 
-all: test.c
-	g++ -o test test.c -I../include/ -L../$(BUILD_DIR) -lmvlcc -L$(MESYTECPATH)/build/ -lmesytec-mvlc -Wl,-rpath=$(MESYTECPATH)/build/
+all: test
+
+test.o: test.c
+	gcc -o test.o -c test.c -I../include/
+
+test: test.o
+	g++ -o test test.o -L../$(BUILD_DIR) -lmvlcc -L$(MESYTECPATH)/build/ -lmesytec-mvlc -Wl,-rpath=$(MESYTECPATH)/build/
