Use Makefile automatic variables.

--- a/example/Makefile
+++ b/example/Makefile
@@ -7,10 +7,10 @@ MESYTECPATH=../../mesytec-mvlc/
 all: test
 
 test.o: test.c
-	gcc -o test.o -c test.c -I../include/
+	gcc -o $@ -c $< -I../include/
 
 test: test.o
-	g++ -o test test.o -L../$(BUILD_DIR) -lmvlcc -L$(MESYTECPATH)/build/ -lmesytec-mvlc -Wl,-rpath=$(MESYTECPATH)/build/
+	g++ -o $@ $< -L../$(BUILD_DIR) -lmvlcc -L$(MESYTECPATH)/build/ -lmesytec-mvlc -Wl,-rpath=$(MESYTECPATH)/build/
 
 clean:
 	rm -rf test test.o
