The example Makefile uses mvlcc-config.sh.

--- a/example/Makefile
+++ b/example/Makefile
@@ -1,16 +1,20 @@
-CCNAME:=$(notdir $(CC))
-BUILD_DIR := build_$(CCNAME)_$(shell $(CC) -dumpmachine)_$(shell $(CC) -dumpversion)
-MESYTECPATH=../../mesytec-mvlc/
+MVLCC_DIR = ../
+
+MVLCC_CONFIG = $(MVLCC_DIR)/bin/mvlcc-config.sh
+
+CFLAGS +=  $(shell $(MVLCC_CONFIG) --cflags)
+LDFLAGS += $(shell $(MVLCC_CONFIG) --ldflags)
+LIBS +=    $(shell $(MVLCC_CONFIG) --libs)
 
 .PHONY: all
 
 all: test
 
 test.o: test.c
-	gcc -o $@ -c $< -I../include/
+	gcc -o $@ -c $< $(CFLAGS)
 
 test: test.o
-	g++ -o $@ $< -L../$(BUILD_DIR) -lmvlcc -L$(MESYTECPATH)/build/ -lmesytec-mvlc -Wl,-rpath=$(MESYTECPATH)/build/
+	g++ -o $@ $< $(LDFLAGS) $(LIBS)
 
 clean:
 	rm -rf test test.o
